<resources>
    <string name="app_name">RoomDbUsers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="delete_with_email">Delete With Email</string>
    <string name="delete_user">Delete User</string>
    <string name="update">Update</string>
</resources>